welcome.lessons.welcome.bat.bool1.IcyHot.scala.error
icyHot:2: error: ';' expected but symbol literal found.
retournez vrai si l'une est inférieure à zéro et l'autre supérieure à 100.
                                                  ^